# nutriclarity-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish.yml
src/nutriclarity_mcp/: __init__.py  client.py  config.py  formatters.py  server.py
tests/: test_client.py  test_write.py
