[project]
name = "nutriclarity-mcp"
version = "0.2.0"
description = "MCP server for food nutrition data (barcode lookup, search, Nutri-Score/NOVA/Eco-Score, comparison) powered by Open Food Facts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nitish", email = "nitish.work001@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "nutrition", "openfoodfacts", "barcode", "food", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/nitishkp001/nutriclarity-mcp"
Repository = "https://github.com/nitishkp001/nutriclarity-mcp"
Issues = "https://github.com/nitishkp001/nutriclarity-mcp/issues"

[project.scripts]
nutriclarity-mcp = "nutriclarity_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nutriclarity_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
